<resources>
    <string name="app_name">KBMP</string>
    <string name="app_name_full">Kostya Bakay Media Player</string>
    <string name="developer_email">kostya.bakay@gmail.com</string>
    <integer name="com_vk_sdk_AppId">5366456</integer>

    <string name="starting_fragment_message">This is online audio player. You can listen your local
        music, but if you want to listen online music you should log in to your vk.com account.</string>

    <string name="artist_image">Artist image</string>
    <string name="artist_name">Artist name</string>
    <string name="song_name">Song name</string>
    <string name="zero_time">0:00</string>
    <string name="about_artist">About artist</string>
    <string name="about_track">About track</string>
    <string name="play_count">Play count</string>
    <string name="listeners">Listeners</string>
    <string name="tags">Tags</string>
    <string name="on_tour">On tour</string>
    <string name="biography">Biography</string>
    <string name="summary">Summary</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dash">\u0020-\u0020</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="please_log_in_to_vk">Please log in to vk.com!</string>
    <string name="please_check_internet_connection">Please check your Internet connection!</string>
    <string name="you_are_logged">You are logged!</string>
    <string name="action_settings">Settings</string>
</resources>
